# 2026.01-T02_G8_Financas_Entrega_03

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  requirements.txt
src/: pyproject.toml
src/apps/accounts/: serializers.py  urls.py  views.py
src/apps/finance/: categorias_padrao.py  models.py  tests.py  tests_api_categorias.py  tests_api_entradas.py  tests_api_extrato.py  tests_api_saidas.py  tests_builder.py  tests_carteira.py  tests_simulacao_gasto.py
src/apps/finance/api/: __init__.py  serializers.py  views.py
src/apps/finance/migrations/: 0001_initial.py  0003_progressodiario.py  0004_parcelamento_antecipadas_no_ciclo.py  0006_capitaliza_nomes.py
src/apps/finance/models/: __init__.py  carteira.py  categoria.py  progresso.py  transacao.py
src/apps/finance/services/: alerta_service.py  dashboard_service.py  extrato.py  extrato_builder.py  financas_transacao_service.py  orcamento_service.py  simulacao_gasto_service.py  transacao_service.py
src/apps/finance/tests/: test_api_entradas.py  test_api_extrato.py  test_api_parcelamentos.py  test_carteira.py  test_dashboard.py  test_orcamento.py  test_progresso_alertas.py  test_services.py
src/apps/provider_llm/: apps.py  domain.py  tests_tools.py
src/apps/provider_llm/adapters/: __init__.py  openai_adapter.py
src/apps/provider_llm/clients/: openai_client.py
src/apps/provider_llm/ports/: llm_port.py
src/apps/provider_llm/services/: __init__.py  provider_llm.py
src/apps/provider_llm/tools/: __init__.py  schemas.py
src/apps/provider_mensageria/: apps.py  tests_facade.py
(+139 files in other folders)
